refactor: 完善代码注释